--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation "com.googlecode.ehcache-spring-annotations:ehcache-spring-annotations:1.2.0"
+
 }
 
 test {
